Update 02 to API Calls

--- a/lookup/templates/base.html
+++ b/lookup/templates/base.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+    <style>
+      .low {background-color: #0C0;}
+      .moderate {background-color: #FFFF00;}
+      .high {background-color: #FF9900;}
+      .very-high {background-color: #FF0000;}
+      .extreme {background-color: #660000;}      
+    </style>
   </head>
   <body>
   	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
