Testing Git via Pycharm

--- a/lookup/templates/home.html
+++ b/lookup/templates/home.html
@@ -8,7 +8,7 @@
   <hr class="my-4">
 </div>
 
-<h1>Weather Forecast...</h1>
+<h1>Weather Forecast</h1>
 <br/>
 
 <p>{{ api_data }}</p>
@@ -75,7 +75,7 @@
         21-24hrs < Type: {{ api.SiteRep.DV.Location.Period.4.Rep.7.W }} | Temp: {{ api.SiteRep.DV.Location.Period.4.Rep.7.T }}oC | Rain: {{ api.SiteRep.DV.Location.Period.4.Rep.7.Pp }}% | UV: {{ api.SiteRep.DV.Location.Period.4.Rep.7.U }}% ><br/>
         <br/>
 
-        <!-- {{ api.SiteRep.DV.Location.Period.5 }} <br/><br/>
+        <!-- Samples: {{ api.SiteRep.DV.Location.Period.5 }} <br/><br/>
                 {{ api.SiteRep.DV.Location.Period.6 }} <br/><br/>
                 Max UV Levels 0-3am: {{ api.SiteRep.DV.Location.Period.4.Rep.0.U }}% <br/>
                 Max UV Levels 3-6am: {{ api.SiteRep.DV.Location.Period.4.Rep.1.U }}% <br/>
